--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         <div id="stack">
             <label>Qual é a sua stack na programação?</label>
             <div>
-                <input type="radio" name="frontend" id="frontend" checked>Front-end
-                <input type="radio" name="backend" id="backend">Back-end
-                <input type="radio" name="fullstack" id="fullstack">Full-stack
+                <input type="radio" name="stacks" id="frontend" checked>Front-end
+                <input type="radio" name="stacks" id="backend">Back-end
+                <input type="radio" name="stacks" id="fullstack">Full-stack
             </div>
         </div>
         <div id="xp">
